--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <h2>간단 계산기</h2>
   <div class="calculator">
-    <input type="text" id="display" disabled>
+    <input type="text" id="display" readonly>
     <br>
     <button onclick="press('7')">7</button>
     <button onclick="press('8')">8</button>
@@ -57,4 +57,6 @@
     function clearDisplay() {
       display.value = '';
     }
-  </s
+  </script>
+</body>
+</html>
